Fri May 26 10:17:12 1995 Keith Vetter (keithv@fusion.com)

	* adm_proto.h: added more missing INTERFACE.
	* los-proto.h: moved in prototype for gmt_mktime().

Thu May 25 19:27:45 1995 Keith Vetter (keithv@fusion.com)

	* adm_proto.h: two function's prototype were missing INTERFACE.
	* k5-config.h: kadm needs the kdb.h file.

Thu May 25 15:39:31 1995 Keith Vetter (keithv@fusion.com)

	* los-proto.h: moved in the prototype for krb5_make_fulladdr.

Tue May 23 15:33:00 1995  Theodore Y. Ts'o  (tytso@dcl)

	* k5-config.h, k5-sockets.h: Move the sockets specific setup out
		  of k5-config.h to k5-sockets.h, and modify k5-int to
		  include k5-sockets.h (if it is requested by
		  NEED_SOCKETS) after including krb5.h.  This keeps the
		  gdb type numbers the same across .o files, so that
		  recent binuntils can compress the debugging information
		  in executables linked with a debugging library.

Mon May 22 09:41:39 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in	- (install) Always perform install actions using
			  $(INSTALL_DATA).
	* configure.in	- Locate install program.

Sun May 21 15:25:45 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (PROCESS_REPLACE): Replace the RCTMPDIR in stock.h
		with a configuration determined directory

	* configure.in: Determine which directory to use for the replay
		cache. (/usr/tmp does not exist on netbsd).

Wed May 10 13:20:47 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (install): Install ET_HEADERS...

Tue May 9 15:17:00 EDT 1995	Paul Park	(pjpark@mit.edu)
	Add definitions and prototypes for new administrative protocol.

Mon May  8 22:13:15 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* los-proto.h: krb5_read_password - prompt strings should be const
		char *. 
		Remove krb5_init_os_context and krb5_free_os_context. (The
		proper prototypes are already in place i.e.
		krb5_os_init_context). 

Fri Apr 28 15:14:38 EDT 1995	Paul Park	(pjpark@mit.edu)